2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-09-30  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: Added new module 'treeql' to the
	  installer. Thanks to Colin McCormack for donating it.

2004-09-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl (ainstall): Ensure existence of directory for the
	  applications to install.

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl (tclfiles, docfiles): Added code to exclude files under
	  SCCS directories from the validation. Required to prevent bogus
	  output when run in my BitKeeper repository. Also fixed bug in
	  docfiles, redefined the wrong command.

2004-09-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: New module 'tie added to installer. Tcl
	  files and documentation, no examples.

2004-08-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* all.tcl: Added constraint 'tcl8.5plus'.

2004-08-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* modules/tar:
	* installed_modules.tcl: New module: 'tar'. Tcl files and
	  documentation, no examples.

2004-07-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* apps/dtplite:     New application, a lightweight doctools
	* apps/dtplite.man: processor, superceding mpexpand.

	* installer.tcl:         Extended the installer with code to
	* install_action.tcl:    handle the installation of the
	* installed_modules.tcl: applications provided by tcllib.

2004-07-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* installed_modules.tcl: NEW MODULE: http
	The http module is intended to contain things for use with the http
	package. Now, this is the 'autoproxy' package. I plan to add an
	auto-cookie managing package too (if I can find it.)

2004-07-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
