@@ -1,3 +1,9 @@
+2004-10-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* examples/htmlparse/webviewer.tcl: Added a sample app to 
+	demonstrate the use of the htmlparse package. This also demos the
+	use of the autoproxy package too.
+
 2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
